[package]
name = "hardshare"
description = "share your hardware through the rerobots infrastructure"
homepage = "https://hardshare.dev/"
repository = "https://github.com/rerobots/hardshare"
license = "Apache-2.0"
version = "0.12.0-devel"
authors = ["Scott C. Livingston <scott@rerobots.net>"]
edition = "2018"
include = [
    "/src",
    "/README.md",
    "/CHANGELOG",
    "/keys/webui-public.pem",
]

[dependencies]
log = "0.4"
env_logger = "0.8"
home = "0.5.3"
openssl = { version = "0.10", features = ["vendored"] }
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
awc = { version = "2", features = ["openssl"] }
bytes = "0.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
jwt = { version = "0.11", features = ["openssl"] }
rand = "0.8.5"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = [ "color" ]

[target."cfg(unix)".dependencies]
openssl-probe = "0.1.4"

[profile.release]
panic = "abort"

[dev-dependencies]
assert_cmd = "1.0"
tempfile = "3.1"
mockito = "0.30.0"
insta = "1.16.0"
