[package]
name = "hardshare"
description = "share your hardware through the rerobots infrastructure"
homepage = "https://hardshare.dev/"
repository = "https://github.com/rerobots/hardshare"
license = "Apache-2.0"
version = "0.13.2-devel"
authors = ["Scott C. Livingston <scott@rerobots.net>"]
edition = "2018"
readme = "README.md"
include = [
    "/src",
    "/CHANGELOG",
    "/keys/public.pem",
]

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
awc = { version = "2", features = ["openssl"] }
base64 = "0.21"
bytes = "0.5"
env_logger = "0.8"
futures = "0.3"
home = "0.5.3"
image = "0.24.6"
jwt = { version = "0.11", features = ["openssl"] }
log = "0.4"
nix = "0.26"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3.1"

[target.'cfg(target_os="linux")'.dependencies]
v4l = { version = "0.14", features = ["v4l2"] }

[target.'cfg(target_os="macos")'.dependencies]
openpnp_capture = "0.2.4"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = [ "color" ]

[target."cfg(unix)".dependencies]
openssl-probe = "0.1.4"

[profile.release]
panic = "abort"

[dev-dependencies]
assert_cmd = "1.0"
insta = "1.36"
mockito = "0.30.0"
tempfile = "3.1"
