[package]
name = "hardshare"
description = "share your hardware through the rerobots infrastructure"
homepage = "https://hardshare.dev/"
repository = "https://github.com/rerobots/hardshare"
license = "Apache-2.0"
version = "0.13.2-devel"
authors = ["rerobots, Inc. <q@rerobots.net>"]
edition = "2021"
readme = "README.md"
include = [
    "/src",
    "/CHANGELOG",
    "/keys/public.pem",
]

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-web = "4"
actix-ws = "0.3"
awc = { version = "3.5", features = ["rustls"] }
base64 = "0.21"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3"
home = "0.5.3"
image = "0.24.6"
log = "0.4"
rand = "0.8.5"
rerobots = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serialport = "4.7.0"
tempfile = "3.1"

tokio = { version = "1.40", features = ["net", "rt", "signal", "sync"] }

openpnp_capture = "0.2.4"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = [ "color" ]

[profile.release]
panic = "abort"

[dev-dependencies]
assert_cmd = "1.0"
insta = "1.36"
mockito = "0.30.0"
tempfile = "3.1"
