[package]
name = "rrhttp"
homepage = "https://docs.rerobots.net/hardshare"
repository = "https://github.com/rerobots/hardshare"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "net"] }
